css/main.css
/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
/* ++++++++++++++++++++++++++++++++ GENERAL +++++++++++++++++++++++++++++++++ */
/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */

body, div, p, h3, h4 {
	font-family: 'Fira Sans', sans-serif;
	-webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1, h2 {
	font-family: 'Vollkorn', serif;
	color: #980000;
}

h1, h2, h3, h4 {
	text-align: center;
}

h1 {
	font-size: 60px;
	font-weight: 600;
	margin-top: 100px;
	margin-bottom: 20px;
}

h2 {
	font-size: 30px;
	font-weight: 600;
	padding-bottom: 30px;
	margin-bottom: 30px;
}

h2::after {
     content: "";
		 background-color: #980000;
     position: relative;
     display: block;
		 margin: auto;
     height: 2px;
     width: 250px;
		 bottom: -30px;
}

h3 {
	font-size: 24px;
	font-weight: normal;
}

h4 {
	font-size: 16px;
	text-align: left;
	font-weight: bold;
}

.container-fluid {
	padding: 0;
}

.container {
	max-width: 700px;
	margin-top: 80px;
	margin-bottom: 80px;
}

p:first-child:first-letter {
  color: #980000;
  font-family: 'Vollkorn', serif;
  float: left;
  font-size: 75px;
  line-height: 60px;
  padding-top: 4px;
  padding-right: 8px;
}

/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */

.article-copyright {
	margin: 40px 0px;
}

#bike-paths-map, #bike-security-map {
  height: 100%;
}

.wide-container {
	max-width: 1200px;
}

/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
/* +++++++++++++++++++++++++++++++++ INTRO ++++++++++++++++++++++++++++++++++ */
/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */

.bike-paths-container {
	position: relative;
	display: block;
	height: 600px;
}

#controls {
	position: absolute;
  padding: 20px;
  background: white;
  top: 16px;
  right: 16px;
	width: 250px;
  box-shadow: 0 0 16px rgba(0, 0, 0, 0.12);
  border-radius: 6px;
  z-index: 1000;
}

#controls ul {
	margin: 0;
	padding: 0;
}

#controls li {
  list-style-type: none;
  margin: 0 0 8px 0;
}

#controls li input {
  margin: 0 5px 0 0;
}

#controls li label {
  font-size: 16px;
  cursor: pointer;
	margin-bottom: 0;
}

#controls li:last-child {
  margin-bottom: 0;
}

#controls li:hover {
  cursor: pointer;
}

/* pop-ups */
/* to create pop-up information windows and interact with your map */
#pop-up {
  position: absolute;
  top: 220px;
  right: 16px;
  width: 250px;
  z-index: 1000;
}

.wrapper {
  padding: 16px;
  background: white;
  box-shadow: 0 0 16px rgba(0, 0, 0, 0.12);
  border-radius: 4px;
}

/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
/* ++++++++++++++++++++++++++++ RIDING SECURITY +++++++++++++++++++++++++++++ */
/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */

#bikepath-types img {
	margin-top: 80px;
	margin-bottom: 20px;
}

#bikepath-types .col-6 {
	padding: 0 30px;
}

/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
/* +++++++++++++++++++++++++ SECURITY SCROLLYTELLING ++++++++++++++++++++++++ */
/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */

#bike-security-container {
	position: relative;
	display: block;
	background-color: #262522;
}

.gradient-map-overlay {
	position: absolute;
	left: 0;
	top: 0;
	width: 50%;
	height: 100%;
	background-image: linear-gradient(-90deg, rgba(38,37,34,0.00) 0%, #262522 100%);
	z-index: 1000;
}

.scroll__graphic {
	position: absolute;
	top: 0;
	left: 33.33333%;
	padding: 0;
}

.scroll__graphic.is-fixed {
	position: fixed;
}

.scroll__graphic.is-bottom {
	bottom: 0;
	top: auto;
}

.chart {
	position: absolute;
	top: 50%;
	width: 100%;
	height: 100%;
	-moz-transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
	transform: translateY(-50%);
}

.scroll__text {
}

.step {
	margin: 2rem auto;
}

.step p {
	color: white;
	padding: 1rem;
	-moz-transform: translateY(100%);
	-webkit-transform: translateY(100%);
	transform: translateY(100%);
}

